--- a/CAPSTONE.ipynb
+++ b/CAPSTONE.ipynb
@@ -71,7 +71,7 @@
     "\n",
     "* centers of candidate areas will be generated algorithmically and approximate addresses of centers of those areas will be obtained using **Google Maps API reverse geocoding**\n",
     "* number of restaurants and their type and location in every neighborhood will be obtained using **Foursquare API**\n",
-    "* coordinate of ***Rome*** center will be obtained using **Google Maps API geocoding** of well known ***Rome*** location (Alexanderplatz)"
+    "* coordinate of ***Rome*** center will be obtained using **Google Maps API geocoding** of well known ***Rome*** locations"
    ]
   },
   {
